# aws-console-tui-rs

./: .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yml  log.2023-10-23  log.2023-10-24  log.2023-10-27  title.txt
src/: config.rs  main.rs  repository.rs  s3.rs  state.rs  tui.rs  ui.rs
src/config/: app_config.rs  command.rs  config.rs  logging.rs
src/repository/: cloud_watch_logs.rs  ec2.rs  login.rs  profile.rs
src/state/: actions.rs  appstate.rs  cloud_watch_logs_state.rs  manager.rs  state.rs
src/state/action_handlers/: actions.rs  cloud_watch_logs_action_handler.rs  profile_action_handler.rs  region_action_handler.rs
src/state/actions/: actions.rs  cloud_watch_logs_action_handler.rs  profile_action_handler.rs  profile_actions.rs  service_action_handler.rs
src/tui/: app.rs  component.rs  config.rs  event.rs  logo.rs  term.rs
src/tui/component/: awsservice.rs  profiles.rs  regions.rs  root.rs  services.rs
src/ui/: component.rs  config.rs  logo.rs  manager.rs  pages.rs  tui_config.rs
src/ui/component/: base.rs  cloud_watch.rs  cloud_watch_logs.rs  profiles.rs  regions.rs  services.rs  status.rs  toolbar.rs
src/ui/component/base/: list_component.rs
src/ui/component/cloud_watch_logs/: cloud_watch_log_groups.rs
src/ui/pages/: home.rs  service.rs
tests/: handlers_profile_actions.rs
tests/utils/: mod.rs
volume/cache/: machine.json
