[package]
name = "aws-console-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.1"
aws-sdk-cloudwatchlogs = "0.34.0"
aws-sdk-ec2 = "0.33.1"
aws-sdk-s3 = "0.33.0"
aws-sdk-sts = "0.33.0"
better-panic = "0.3.0"
chrono = { version = "0.4.31", features = ["std"] }
clap = { version = "4.4.6", features = ["cargo", "string"] }
const_format = "0.2.32"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
figment = { version = "0.10.11", features = ["toml"] }
futures = "0.3.28"
human_bytes = { version = "0.4", default-features = false }
libc = "0.2.149"
ratatui = "0.23.0"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
tui-tree-widget = "0.14.0"

[dev-dependencies]
assert_fs = "1.0.13"


[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
lto = true
