[package]
name = "aws-console-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = { version = "0.57.1", features = ["sso"] }
aws-sdk-cloudwatchlogs = "0.35.0"
aws-sdk-ec2 = "0.35.0"
aws-sdk-s3 = "0.35.0"
aws-sdk-sts = "0.35.0"
better-panic = "0.3.0"
chrono = { version = "0.4.31", features = ["std"] }
clap = { version = "4.4.7", features = ["cargo", "string"] }
const_format = "0.2.32"
crossterm = { version = "0.27.0", features = ["event-stream"] }
directories = "5.0.1"
figment = { version = "0.10.12", features = ["toml"] }
futures = "0.3.29"
human_bytes = { version = "0.4.3", default-features = false }
libc = "0.2.149"
ratatui = "0.24.0"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sysinfo = "0.29.10"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
tui-tree-widget = "0.15.0"

[dev-dependencies]
assert_fs = "1.0.13"


[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
lto = true
